<resources>
    <string name="app_name">iZZyLōd</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="having_trouble">Having trouble? Go to Pin Login</string>
    <string name="login_with">Login with Touch ID</string>
    <string name="please_place">Please place your fingertip to scanner\nto verify your indentity</string>
    <string name="trans_amount">Sejumlah</string>
    <string name="trans_id">ID transaksi</string>
    <string name="trans_description">Transaction Description</string>
    <string name="account">Account</string>
    <string name="add_remarks">Add Remarks</string>
    <string name="change">Change</string>
    <string name="enter_amt">Masukkan jumlah</string>
    <string name="dollar_sign">Rp.</string>
    <string name="write_a_msg">Tulis Pesan</string>
    <string name="request">Deposit</string>
    <string name="send">SEND</string>
    <string name="save">SAVE</string>
    <string name="phone_number">Nomor telepon</string>
    <string name="name">Nama</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="enter_number">Enter phone number</string>
    <string name="secure_login">SECURE LOGIN</string>
    <string name="general_settings">General Settings</string>
    <string name="change_app">Change App Lock</string>
    <string name="language">Language</string>
    <string name="selected_lang">Selected language is English</string>
    <string name="email">Email</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="sync_settings">Sync Settigns</string>
    <string name="sync_on_start">Sync on start</string>
    <string name="allow_app_to">Allow application to sync data every time it start</string>
    <string name="syncing_period">Syncing period</string>
    <string name="the_previous">The previos 90 days of activitys will donwload when connected</string>
    <string name="multi_categories">Multi Categories</string>
    <string name="more">More</string>
    <string name="t_and_c">*T&amp;C Apply</string>
    <string name="get">Get</string>
    <string name="congrat">Congratulations!</string>
    <string name="you_are_pre">You are pre-aproved for these cards!</string>
    <string name="know_more">Know More</string>
    <string name="apply_now">Apply Now</string>
    <string name="select_category">Select Category</string>
    <string name="bills">Bills</string>
    <string name="beauty">Beauty</string>
    <string name="_more">MORE</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="txtID">No Handphone</string>
    <string name="txtPIN">Kata Sandi</string>
    <string name="txtLogin">Masuk</string>
    <string name="txtRegister">Daftar</string>
    <string name="login_with_fingerprint">Untuk login dengan fingerprint, sentuh tombol di atas.</string>
    <string name="daftar_baru">Pengguna baru? <u>Daftar Sekarang</u></string>
    <string name="login">MASUK</string>
    <string name="application_name">FingerprintDialog</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="facebook_app_id">349916285360399</string>
    <string name="account_kit_client_token">9736c7c2e8a0ec30813a15e9f3f9df1f</string>
    <string name="ak_login_protocol_scheme">ak349916285360399</string>
    <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="fingerprint_activation_message">Mohon aktifkan login dengan fingerprint setelah masuk dengan password dari menu akun saya</string>
    <string name="fingerprint_update_message">Fingerprint baru saja dibuat, login dengan fingerprint tidak diizinkan. Silakan masuk dulu dengan password\nlalu aktifkan login dengan fingerprint di menu Akun Saya"</string>
    <string name="system_malfunction">Kegagalan sistem server, silakan coba beberapa saat lagi</string>
    <string name="internet_connection_error">Pastikan anda mempunyai koneksi internet yang aktif</string>
    <string name="new_password">Kata sandi baru</string>
    <string name="create_new_password">Membuat kata sandi</string>
    <string name="new_password_not_macth">Password baru yang dimasukkan harus sama dengan yang dikonfirmasi</string>
    <string name="saldo">Saldo</string>
    <string name="poin">Poin</string>
    <string name="cashback">Cashback</string>
    <string name="kredit">Kredit</string>
    <string name="deposit">Deposit</string>
    <string name="tukar">Tukar</string>
    <string name="komisi">Komisi</string>
    <string name="price">Harga</string>
    <string name="beli">BELI</string>
    <string name="mobile_reguler_recharge">Pembelian pulsa reguler</string>
    <string name="remember_me">Ingat kata sandi saya</string>
    <string name="forget_password">lupa kata sandi?</string>
    <string name="product">Produk</string>
    <string name="recharge_notification">Notifikasi Pembelian</string>
    <string name="add_balance">Tambah saldo</string>
    <string name="customer_name">Nama pelanggan</string>
    <string name="pay">BAYAR</string>
    <string name="customer_phone_number">Nomor telepon pelanggan</string>
    <string name="electric_customer_id">ID pelanggan/ nomor meter</string>
    <string name="recharge_confirmation">Konfirmasi Pembelian</string>
    <string name="electric_recharge">Pembelian Token PLN</string>
    <string name="transfer_to">Transfer ke</string>
    <string name="inquiry">INQUIRY</string>
    <string name="electric_bill_inquiry">Pembayaran Tagihan PLN</string>
    <string name="customer_id">No pelanggan</string>
    <string name="print_receipt">CETAK STRUK</string>
    <string name="voucher_serial_number">Voucher serial number</string>
    <string name="balance_transfer">Transfer saldo</string>
    <string name="mobile_phone_bill_inquiry">Pembayaran tagihan telepon seluler</string>
    <string name="enter_customer_id">Masukkan nomor pelanggan</string>
    <string name="enter_mobile_phone">Masukkan nomor telepon pelanggan</string>
    <string name="enter_electric_customer_id">Masukkan nomor pelanggan / nomor meter</string>
    <string name="mobile_recharge">Pulsa</string>
    <string name="data_recharge">Paket Data</string>
    <string name="pay_tv_prepaid">TV Berbayar</string>
    <string name="electric_prepaid">Token Listrik</string>
    <string name="mobile_postpaid">Pascabayar</string>
    <string name="water">PDAM</string>
    <string name="electric_postpaid">PLN</string>
    <string name="mobile_data_recharge">Pembelian Paket Data</string>
    <string name="transfer_balance">Transfer</string>
    <string name="buy">BELI</string>
    <string name="no_trx">No. transaksi</string>
    <string name="bod">Tanggal lahir</string>
    <string name="address">Alamat</string>
    <string name="province">Provinsi</string>
    <string name="city_regency">Kota/Kabupaten</string>
    <string name="gender">Jenis kelamin</string>
    <string name="zip_code">Kode pos</string>
    <string name="admin_fee">Biaya admin</string>
    <string name="use_fingerprint">Login dengan fingerprint</string>
    <string name="change_profile">Ubah profil</string>
    <string name="facebook_account">Akun facebook</string>
    <string name="qr_code">QR code</string>
    <string name="old_password">Password lama</string>
    <string name="change_password">Ubah kata sandi</string>
    <string name="confirm_new_password">Ketik ulang kata sandi</string>
    <string name="referral_hint">Jika tidak ada, boleh dikosongkan</string>
    <string name="add">Tambah</string>
    <string name="setting_printer">Printer</string>
    <string name="denom">Denom</string>
    <string name="password_hint">Password minimal terdiri dari 8 karakter, 1 angka, 1 huruf besar dan 1 huruf kecil</string>
    <string name="hello">Hello World, P25Demo!</string>
    <string name="initialization">Connect Device</string>
    <string name="disconnect">Disconect Device</string>
    <string name="printbarcode">Print Barcode</string>
    <string name="setdefault">Set Default</string>
    <string name="scandevice">Scan Device</string>
    <string name="print">Test Print Text Below</string>
    <string name="printpicture">Connect and Set Default Device</string>
    <string name="loadcard">Swip Card</string>
    <string name="inputpwd">Input Password</string>
    <string name="processdata">Process Data</string>
    <string name="setformat">Set format</string>
    <string name="setformatdata">Format</string>
    <string name="printdemo">Print Demo Content</string>
    <string name="home">Back to Main Page</string>
    <string name="error">Error</string>
    <string name="alert_title">Info</string>
    <string name="exit_alert">Are you sure to exit?</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="bluetooth_send">Send</string>
    <string name="bluetooth_not_connected">You are not connected to a device</string>
    <string name="bluetooth_not_enabled_leaving">Bluetooth was not enabled. Leaving the application.</string>
    <string name="bluetooth_title_connecting">connecting...</string>
    <string name="bluetooth_title_connected_to">Connected: </string>
    <string name="bluetooth_title_not_connected">No device connected</string>
    <string name="bluetooth_device_list">Device List</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="bluetooth_connect_success">Connect success</string>
    <string name="bluetooth_connect_failed">Connect failed</string>
    <string name="bluetooth_stop_scanning">Stop scanning</string>
    <string name="bluetooth_scanning">Scanning...</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
</resources>