<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:elevation="1dp"
        android:orientation="vertical">

        <include layout="@layout/toolbar_transaction" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.7dp"
            android:elevation="1dp"
            android:orientation="vertical"
            android:paddingLeft="24.3dp"
            android:paddingRight="24.3dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.9dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/phonebook"
                    android:hint="@string/phone_number"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"
                    android:drawableRight="@drawable/phonebook" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bank_name"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_number"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:layout_marginBottom="26.7dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <id.co.icg.reload.ui.customfonts.MyTextView_Roboto_Regular
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>