<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <include layout="@layout/toolbar_transaction" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.7dp"
                android:elevation="1dp"
                android:orientation="vertical"
                android:paddingLeft="24.3dp"
                android:paddingRight="24.3dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19.6dp"
                    android:theme="@style/TextLabel">

                    <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                        android:id="@+id/et_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:textColor="@color/trans_text_black"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19.6dp"
                    android:theme="@style/TextLabel">

                    <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/trans_text_black"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="26.7dp"
                    android:layout_marginTop="19.6dp"
                    android:theme="@style/TextLabel">

                    <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                        android:id="@+id/et_confirmed_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/trans_text_black"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <id.co.icg.reload.ui.customfonts.MyTextView_Roboto_Regular
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>