<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_transacation" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="24.3dp"
                android:paddingRight="24.3dp">

                <id.co.icg.reload.ui.customfonts.MaterialSpinner_Roboto_Reguler
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    app:ms_alwaysShowFloatingLabel="true"
                    app:ms_baseColor="@color/text_gray"
                    app:ms_floatingLabelText="@string/product"
                    app:ms_highlightColor="@color/trans_text_black"
                    app:ms_hint="@string/product"
                    app:ms_hintColor="@color/trans_text_black"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_customer_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18.9dp"
                    android:layout_marginBottom="26.7dp"
                    android:theme="@style/TextLabel">

                    <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                        android:id="@+id/et_customer_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/customer_id"
                        android:inputType="number"
                        android:textColor="@color/trans_text_black"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <id.co.icg.reload.ui.customfonts.MyTextView_Roboto_Regular
        android:id="@+id/tv_inquiry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/inquiry"
        android:letterSpacing="0.1"
        android:textColor="#ffffff"
        android:textSize="15sp" />
</RelativeLayout>