<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:elevation="1dp"
        android:orientation="vertical">

        <include layout="@layout/toolbar_transacation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.7dp"
            android:elevation="1dp"
            android:orientation="vertical"
            android:paddingLeft="24.3dp"
            android:paddingRight="24.3dp">

            <id.co.icg.reload.ui.customfonts.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:text="@string/phone_number"
                android:textColor="@color/text_gray"
                android:textSize="11.7sp" />

            <id.co.icg.reload.ui.customfonts.MyTextView_Roboto_Regular
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="08122223222"
                android:textColor="@color/trans_text_black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6.7dp"
                android:background="@color/view_gray" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:id="@+id/et_confirmed_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_referral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.6dp"
                android:theme="@style/TextLabel">

                <id.co.icg.reload.ui.customfonts.EditText_Roboto_Regular
                    android:id="@+id/et_referral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Kode referral"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <id.co.icg.reload.ui.customfonts.MyTextView_Roboto_Regular
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/save"
        android:letterSpacing="0.1"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>